@@ -4,6 +4,7 @@ Revision history for SVGPDF
 
 	- Internal: Flipped coordinates.
 	- Leave vwidth/vheight as is so caller can scale to font size.
+	- Add rounded rectangles.
 
 0.060	2023-08-18
 
